@@ -187,9 +187,9 @@ if ( ! empty ( $error ) ) {
 <?php etranslate("Next")?>" /></a>
 <div class="title">
 <span class="date"><?php
-  echo date_to_str ( date ( "Ymd", $wkstart ), false ) .
+  echo date_to_str ( date ( "Ymd", $wkstart ), "", false ) .
     "&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;" .
-    date_to_str ( date ( "Ymd", $wkend ), false );
+    date_to_str ( date ( "Ymd", $wkend ), "", false );
 ?></span><br />
 <span class="viewname"><?php 
  echo $view_name 
