@@ -101,9 +101,9 @@ for ( $i = 0; $i < 7; $i++ ) {
   <img src="rightarrow.gif" class="prevnext" alt="<?php etranslate("Next")?>" /></a>
 <div class="title">
 <span class="date"><?php
-  echo date_to_str ( date ( "Ymd", $wkstart ), false ) .
+  echo date_to_str ( date ( "Ymd", $wkstart ), "", false ) .
     "&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;" .
-    date_to_str ( date ( "Ymd", $wkend ), false );
+    date_to_str ( date ( "Ymd", $wkend ), "", false );
 ?></span><br />
 <span class="viewname"><?php echo $view_name ?></span>
 </div></div><br />
