@@ -1,5 +1,9 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1357953: rollover info translation grammar problem
+      1357943: short description length mismatch
+      1357946: translation problem on system settings page
+      1358124: popup: short description length problem
       1354832: import ical - first edited event multiplies
       1356024: event link in Activity log - NOT FOUND error
       1356541: ics-import will not correctly handle 'private'-entries
@@ -118,6 +122,7 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented RFE 1199126: Link Language and Time/Date Formats
     + Implemented RFE 1357579: Link to 'Home' in trailer menu
     + Added new translation decoding for HTML entities in javascript
     + Adding logic to consume TZID settings in ics files. If the TZID used the Olson 
